--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,17 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = tab
 
-[*.{yml,yaml}]
+[*.{.jshintrc,*.json,*.yml, *.yaml}]
 indent_style = space
-indent_size = 2
+indent_size = 4
+
+[*.css]
+indent_style = tab
+indent_size = 4
+
+[*.scss]
+indent_style = tab
+indent_size = 4
+
+[{*.txt,wp-config-sample.php}]
+end_of_line = crlf
