--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,34 @@
 {
-	"env": {
-		"browser": true,
-		"es2020": true
-	},
-	"extends": [
-		"eslint:recommended",
-		"plugin:@wordpress/eslint-plugin/recommended"
-	],
-	"parserOptions": {
-		"ecmaVersion": 11
-	},
-	"rules": {
-		"prettier/prettier": "warn",
-		"no-console": "off"
-	}
+    "root": true,
+    "env": {
+        "jest": true,
+        "node": true,
+        "es6": true
+    },
+    "extends": [
+        "plugin:@wordpress/eslint-plugin/recommended",
+        "plugin:prettier/recommended" // Enables eslint-plugin-prettier & eslint-config-prettier
+    ],
+    "plugins": [
+        "prettier"
+    ],
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
+    },
+    "ignorePatterns": [
+        "src/**/*.test.ts",
+        "src/frontend/generated/*"
+    ],
+    "rules": {
+        "no-console": "off",
+        "camelcase":"off",
+        "eqeqeq":"off",
+        "jsx-a11y/no-static-element-interactions": "off",
+        "react/jsx-key": "off",
+        "prettier/prettier": "error" // Enforce Prettier formatting as ESLint errors
+    }
 }
