--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"@wordpress/scripts": "^30.15.0",
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^10.1.2",
+		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-prettier": "^5.2.6",
+		"eslint-plugin-react-compiler": "^19.0.0-beta-af1b7da-20250417",
 		"globals": "^16.0.0",
 		"prettier": "^3.5.3",
 		"typescript": "^5.8.3",
