--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,10 +7,12 @@
     },
     "extends": [
         "plugin:@wordpress/eslint-plugin/recommended",
+        "plugin:eslint-comments/recommended",
         "plugin:prettier/recommended" // Enables eslint-plugin-prettier & eslint-config-prettier
     ],
     "plugins": [
-        "prettier"
+        "prettier",
+        "react-compiler"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
@@ -25,8 +27,10 @@
     ],
     "rules": {
         "no-console": "off",
+        "object-shorthand": "off",
         "camelcase":"off",
         "eqeqeq":"off",
+        "@wordpress/no-unsafe-wp-apis": "off",
         "jsx-a11y/no-static-element-interactions": "off",
         "jsx-a11y/no-noninteractive-element-interactions": "off",
         "react/jsx-key": "off",
