--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,12 +27,14 @@
     ],
     "rules": {
         "no-console": "off",
+        "no-shadow":"off",
         "object-shorthand": "off",
         "camelcase":"off",
         "eqeqeq":"off",
         "@wordpress/no-unsafe-wp-apis": "off",
         "jsx-a11y/no-static-element-interactions": "off",
         "jsx-a11y/no-noninteractive-element-interactions": "off",
+        "react-hooks/exhaustive-deps": "off",
         "react/jsx-key": "off",
         "prettier/prettier": "error" // Enforce Prettier formatting as ESLint errors
     }
