--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Local workstation files
+backup/
+node_modules/
+vendor/
+.npm
+.eslintcache
+*.tgz
+*.zip
+~*
+
 # Logs
 logs
 *.log
@@ -5,33 +15,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# dotenv environment variables file
+.env
+
 # Coverage directory used by tools like istanbul
 coverage
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
-# Dependency directories
-node_modules/
-vendor/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Output of `npm pack`
-*.tgz
-
-# Output of `wp-scripts plugin-zip`
-*.zip
-
-# dotenv environment variables file
-.env
-
-# other environment files
-composer*
-
-# temporary files
-~*
