--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start --webpack-copy-php"
+		"start": "wp-scripts start --webpack-copy-php",
+		"readme:md": "wp-readme-to-md"
 	},
 	"devDependencies": {
 		"@wordpress/eslint-plugin": "^22.8.0",
@@ -25,7 +26,8 @@
 		"globals": "^16.0.0",
 		"prettier": "^3.5.3",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.30.1"
+		"typescript-eslint": "^8.30.1",
+		"wp-readme-to-markdown": "^1.0.1"
 	},
 	"dependencies": {
 		"@formatjs/icu-messageformat-parser": "^2.6.2",
